--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 <div id="preloader">
-    <div class="loader-text glitch-text" data-text="LOADING...">LOADING...</div>
+    <div class="loader-text glitch-text" data-text="LOADING MULTIVERSE...">LOADING MULTIVERSE...</div>
     <div class="loader-bar"><div class="bar-fill"></div></div>
 </div>
 
@@ -39,9 +39,10 @@
 </div>
 
 <nav class="navbar">
-    <div class="logo">TONY<span class="accent-cyan">PRIYAN</span></div>
+    <div class="logo">Shanmuga<span class="accent-cyan">.dev</span></div>
     <ul class="nav-links">
         <li><a href="#about" class="hover-trigger">About</a></li>
+        <li><a href="#skills" class="hover-trigger">Skills</a></li>
         <li><a href="#projects" class="hover-trigger">Projects</a></li>
         <li><a href="#achievements" class="hover-trigger">Achievements</a></li>
         <li><a href="#contact" class="hover-trigger">Connect</a></li>
@@ -89,16 +90,66 @@
 
     <section id="skills" class="fade-in">
         <h3>Tech Stack</h3>
-        <div class="skills-grid">
-            <span class="skill-tag red hover-trigger"><i class="fab fa-java"></i> Java</span>
-            <span class="skill-tag red hover-trigger"><i class="fab fa-python"></i> Python</span>
-            <span class="skill-tag red hover-trigger">C</span>
-            <span class="skill-tag cyan hover-trigger"><i class="fab fa-react"></i> React.js</span>
-            <span class="skill-tag cyan hover-trigger"><i class="fab fa-node-js"></i> Node.js</span>
-            <span class="skill-tag cyan hover-trigger"><i class="fas fa-mobile-alt"></i> Flutter</span>
-            <span class="skill-tag purple hover-trigger"><i class="fas fa-database"></i> MySQL</span>
-            <span class="skill-tag purple hover-trigger"><i class="fas fa-leaf"></i> Spring Boot</span>
-            <span class="skill-tag purple hover-trigger"><i class="fab fa-aws"></i> AWS</span>
+        
+        <div class="skills-wrapper">
+            
+            <div class="skill-category">
+                <h4 class="category-title accent-red">Languages</h4>
+                <div class="skills-grid">
+                    <span class="skill-tag red hover-trigger"><i class="fab fa-java"></i> Java</span>
+                    <span class="skill-tag red hover-trigger"><i class="fab fa-python"></i> Python</span>
+                    <span class="skill-tag red hover-trigger">C</span>
+                    <span class="skill-tag red hover-trigger">Dart</span>
+                </div>
+            </div>
+
+            <div class="skill-category">
+                <h4 class="category-title accent-cyan">Web & Mobile</h4>
+                <div class="skills-grid">
+                    <span class="skill-tag cyan hover-trigger"><i class="fab fa-react"></i> React.js</span>
+                    <span class="skill-tag cyan hover-trigger"><i class="fab fa-node-js"></i> Node.js</span>
+                    <span class="skill-tag cyan hover-trigger">Express.js</span>
+                    <span class="skill-tag cyan hover-trigger"><i class="fas fa-mobile-alt"></i> Flutter</span>
+                </div>
+            </div>
+
+            <div class="skill-category">
+                <h4 class="category-title accent-purple">Databases</h4>
+                <div class="skills-grid">
+                    <span class="skill-tag purple hover-trigger"><i class="fas fa-database"></i> MySQL</span>
+                    <span class="skill-tag purple hover-trigger">MongoDB</span>
+                    <span class="skill-tag purple hover-trigger">Oracle SQL</span>
+                </div>
+            </div>
+
+            <div class="skill-category">
+                <h4 class="category-title accent-yellow">Tools & Frameworks</h4>
+                <div class="skills-grid">
+                    <span class="skill-tag yellow hover-trigger">JDBC</span>
+                    <span class="skill-tag yellow hover-trigger"><i class="fas fa-leaf"></i> Spring</span>
+                    <span class="skill-tag yellow hover-trigger"><i class="fas fa-leaf"></i> Spring Boot</span>
+                    <span class="skill-tag yellow hover-trigger"><i class="fab fa-git-alt"></i> Git</span>
+                    <span class="skill-tag yellow hover-trigger">VS Code</span>
+                </div>
+            </div>
+
+            <div class="skill-category">
+                <h4 class="category-title accent-cyan">Cloud & DevOps</h4>
+                <div class="skills-grid">
+                    <span class="skill-tag cyan hover-trigger"><i class="fas fa-fire"></i> Firebase</span>
+                    <span class="skill-tag cyan hover-trigger"><i class="fab fa-aws"></i> AWS</span>
+                </div>
+            </div>
+
+             <div class="skill-category">
+                <h4 class="category-title accent-red">Core Concepts</h4>
+                <div class="skills-grid">
+                    <span class="skill-tag red hover-trigger">DSA</span>
+                    <span class="skill-tag red hover-trigger">OOPs</span>
+                    <span class="skill-tag red hover-trigger">Software Engineering</span>
+                </div>
+            </div>
+
         </div>
     </section>
 
