--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 <div id="preloader">
-    <div class="loader-text glitch-text" data-text="LOADING MULTIVERSE...">LOADING MULTIVERSE...</div>
+    <div class="loader-text glitch-text" data-text="LOADING...">LOADING...</div>
     <div class="loader-bar"><div class="bar-fill"></div></div>
 </div>
 
@@ -39,7 +39,7 @@
 </div>
 
 <nav class="navbar">
-    <div class="logo">Shanmuga<span class="accent-cyan">.dev</span></div>
+    <div class="logo">TONY<span class="accent-cyan">PRIYAN</span></div>
     <ul class="nav-links">
         <li><a href="#about" class="hover-trigger">About</a></li>
         <li><a href="#skills" class="hover-trigger">Skills</a></li>
